--- a/studydimension.html
+++ b/studydimension.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Study Dimension | Unlock Your Potential</title>
+    <title>Study Dimension</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <style>
         :root {
@@ -937,13 +937,13 @@
             <div class="resources-content" id="resourcesContent">
                 <div class="batch-list">
                     <div class="batch-card">
-                        <h3 class="batch-name">Mastering Competitive Programming</h3>
-                        <p class="batch-description">Dive deep into algorithms and data structures with our comprehensive competitive programming batch. Perfect for aspiring software engineers and coding competition participants.</p>
+                        <h3 class="batch-name">Arjuna Jee</h3>
+                        <p class="batch-description">Designed exclusively for Jee students preparing for jee advanced examination. It offers u access to Premium quality batch for free, It has premium teachers and resources with notes, daily practice paper, regular lecture, tests and more...</p>
                         <a href="#" class="batch-link">Start Learning</a>
                     </div>
                     <div class="batch-card">
-                        <h3 class="batch-name">Foundation of Web Development</h3>
-                        <p class="batch-description">Build interactive websites from scratch with HTML, CSS, and JavaScript. Learn modern frameworks and best practices to create responsive, user-friendly web applications.</p>
+                        <h3 class="batch-name">Arjuna Neet</h3>
+                        <p class="batch-description">Designed exclusively for Neet students preparing for Neet examination. It offers u access to Premium quality batch for free, It has premium teachers and resources with notes, daily practice paper, regular lecture, tests and more...</p>
                         <a href="#" class="batch-link">Start Learning</a>
                     </div>
                     <div class="batch-card">
@@ -967,7 +967,7 @@
                         <a href="#" class="batch-link">Start Learning</a>
                     </div>
                 </div>
-                <a href="https://t.me/studydimension" class="telegram-link" target="_blank">
+                <a href="https://t.me/study_dimension_network" class="telegram-link" target="_blank">
                     <i class="fab fa-telegram"></i> Join Our Official Telegram Channel
                 </a>
             </div>
@@ -1087,7 +1087,7 @@
                 </div>
             </div>
             <div class="footer-bottom">
-                <p>&copy; 2024 Study Dimension. All rights reserved.</p>
+                <p>&copy; 2025 Study Dimension. All rights reserved.</p>
             </div>
         </div>
     </footer>
