--- a/index.html
+++ b/index.html
@@ -938,32 +938,47 @@
                 <div class="batch-list">
                     <div class="batch-card">
                         <h3 class="batch-name">Arjuna Jee</h3>
-                        <p class="batch-description">Designed exclusively for Jee students preparing for jee advanced examination. It offers u access to Premium quality batch for free, It has premium teachers and resources with notes, daily practice paper, regular lecture, tests and more...</p>
+                        <p class="batch-description">The Arjuna JEE 2026 batch is a comprehensive online program designed for students preparing for the JEE Main and Advanced exams in 2026, covering the Class 11 syllabus. It's offered by Physics Wallah (PW) and includes features like live lectures, DPPs with video solutions, regular tests, and doubt support. </p>
                         <a href="#" class="batch-link">Start Learning</a>
                     </div>
                     <div class="batch-card">
                         <h3 class="batch-name">Arjuna Neet</h3>
-                        <p class="batch-description">Designed exclusively for Neet students preparing for Neet examination. It offers u access to Premium quality batch for free, It has premium teachers and resources with notes, daily practice paper, regular lecture, tests and more...</p>
+                        <p class="batch-description">The Arjuna NEET 2026 batch by Physics Wallah is an online coaching program for Class 11 students targeting NEET 2026. It offers live classes, daily practice problems, doubt support, regular tests, and comprehensive study materials (physical modules available). The course covers the entire NEET syllabus for Class 11 and includes revision, mentorship, and career guidance.
+                        </p>
                         <a href="#" class="batch-link">Start Learning</a>
                     </div>
                     <div class="batch-card">
-                        <h3 class="batch-name">Data Science with Python</h3>
-                        <p class="batch-description">Learn data analysis, machine learning, and visualization with Python. This batch covers everything from basic statistics to advanced predictive modeling techniques.</p>
+                        <h3 class="batch-name">Lakshya jee</h3>
+                        <p class="batch-description">The Lakshya JEE batch by Physics Wallah is an online coaching program designed for students targeting the JEE Mains and Advanced exams. It features live classes covering Physics, Chemistry, and Math, daily practice problems with video solutions, scheduled tests, and All India Test Series (AITS). Students also receive PDF notes, doubt support, and access to recorded lectures (Khazana). The program typically starts in Class 12, aiming for comprehensive syllabus completion and revision before the JEE exams.
+                        </p>
                         <a href="#" class="batch-link">Start Learning</a>
                     </div>
                     <div class="batch-card">
-                        <h3 class="batch-name">Mobile App Development</h3>
-                        <p class="batch-description">Create cross-platform mobile applications using Flutter and React Native. Learn to design, develop, and deploy apps for both iOS and Android platforms.</p>
+                        <h3 class="batch-name">Lakshya neet</h3>
+                        <p class="batch-description">The Lakshya NEET batch by Physics Wallah is an online coaching program primarily for Class 12 students aiming for the NEET exam. It offers live lectures covering Physics, Chemistry, Botany, and Zoology, alongside daily practice problems with video solutions, regular tests, and access to the All India Test Series. The batch also provides comprehensive study modules, doubt resolution, recorded lectures (Khazana), and mentorship from NEET-qualified individuals.
+                        </p>
                         <a href="#" class="batch-link">Start Learning</a>
                     </div>
                     <div class="batch-card">
-                        <h3 class="batch-name">Artificial Intelligence Fundamentals</h3>
-                        <p class="batch-description">Explore the world of AI with this introductory batch covering neural networks, natural language processing, computer vision, and ethical considerations.</p>
+                        <h3 class="batch-name">Uday science</h3>
+                        <p class="batch-description">The Uday Science 2026 batch by Physics Wallah is an online coaching program for Class 11 science students (CBSE/ISC boards). It covers Physics, Chemistry, Math, Biology, and English (and sometimes Computer Science/Physical Education). Features include live lectures, daily practice problems, regular tests, doubt support, and PDF notes. The syllabus is completed by year-end, followed by revision, and the batch often includes exam guidance and mentorship.
+                        </p>
                         <a href="#" class="batch-link">Start Learning</a>
                     </div>
                     <div class="batch-card">
-                        <h3 class="batch-name">Blockchain Technology</h3>
-                        <p class="batch-description">Understand the principles of blockchain, smart contracts, and decentralized applications. Learn Solidity and how to build your own blockchain projects.</p>
+                        <h3 class="batch-name">Udaan 2026</h3>
+                        <p class="batch-description">The Udaan 2026 batch by Physics Wallah is an online coaching program for Class 10 students, often tailored for specific boards like CBSE or UP Board. It features live classes covering all core subjects (Science, Math, Social Science, English, etc.), daily practice problems with video solutions, regular tests, and comprehensive doubt support. The batch includes PDF notes, access to recorded lectures, and may offer mentorship and career guidance, aiming for complete syllabus coverage and board exam preparation.</p>
+                        <a href="#" class="batch-link">Start Learning</a>
+                    </div>
+                    <div class="batch-card">
+                        <h3 class="batch-name">Neev 2026</h3>
+                        <p class="batch-description">The Neev 2026 batch by Physics Wallah is an online program for Class 9 students, typically focusing on board exam preparation (e.g., CBSE, State Boards). It offers live classes for core subjects (Science, Math, Social Science, English, etc.), daily practice problems with video solutions, regular tests, and 24/7 doubt support. The batch includes PDF notes, physical modules, and aims for comprehensive syllabus completion by December 2025, followed by revision for the final exams.</p>
+                        <a href="#" class="batch-link">Start Learning</a>
+                    </div>
+                    <div class="batch-card">
+                        <h3 class="batch-name">Nishant Jindal 11</h3>
+                        <p class="batch-description">Nishant Jindal's 11th class batch for JEE offers coaching from experienced "Kota teachers" who have produced top ranks and authored renowned books. It includes live lectures, recordings, Daily Practice Problems (DPPs), study modules, and test series covering the entire IIT JEE syllabus. The program is designed for students aiming for JEE Mains and Advanced.
+                        </p>
                         <a href="#" class="batch-link">Start Learning</a>
                     </div>
                 </div>
@@ -1000,31 +1015,31 @@
                         <div class="author-avatar">AS</div>
                         <div class="author-info">
                             <h4>Ananya Sharma</h4>
-                            <p>Computer Science Student</p>
+                            <p>Jee Student</p>
                         </div>
                     </div>
                 </div>
                 <div class="testimonial-card">
                     <p class="testimonial-content">
-                        The clarity of resources here is unmatched. Finally, a platform that truly cares about student success without charging exorbitant fees. The web development batch gave me the skills to start freelancing while still in college.
+                        The clarity of resources here is unmatched. Finally, a platform that truly cares about student success without charging exorbitant fees. The web development batch gave me the skills to start freelancing while still in school.
                     </p>
                     <div class="testimonial-author">
                         <div class="author-avatar">RS</div>
                         <div class="author-info">
                             <h4>Rohan Singh</h4>
-                            <p>Freelance Web Developer</p>
+                            <p>Class 10 Cbse</p>
                         </div>
                     </div>
                 </div>
                 <div class="testimonial-card">
                     <p class="testimonial-content">
-                        I never thought I could grasp complex data science concepts, but the engaging content made it so easy. The practical projects helped me build a portfolio that got me noticed by recruiters. Highly recommend Study Dimension to anyone serious about learning!
+                        I never thought I could grasp complex jee concepts, but the engaging content made it so easy. The projects helped me build a portfolio that got me noticed by recruiters. Highly recommend Study Dimension to anyone serious about learning!
                     </p>
                     <div class="testimonial-author">
                         <div class="author-avatar">PP</div>
                         <div class="author-info">
                             <h4>Priya Patel</h4>
-                            <p>Data Analyst</p>
+                            <p>Jee student</p>
                         </div>
                     </div>
                 </div>
