--- a/index.html
+++ b/index.html
@@ -391,7 +391,7 @@
         }
 
         .resources-content.active {
-            max-height: 2000px;
+            max-height: 4000px;
             transition: max-height 0.8s ease-in;
         }
 
@@ -409,6 +409,7 @@
             box-shadow: 0 5px 15px rgba(0, 0, 0, 0.05);
             transition: var(--transition);
             border: 1px solid rgba(0, 0, 0, 0.05);
+            height: 100%;
         }
 
         body.dark-mode .batch-card {
