--- a/index.html
+++ b/index.html
@@ -95,6 +95,13 @@
             color: var(--text-light);
             transition: var(--transition);
             overflow-x: hidden;
+            -webkit-touch-callout: none; /* iOS Safari */
+            -webkit-user-select: none;   /* Safari */
+            -khtml-user-select: none;    /* Konqueror HTML */
+            -moz-user-select: none;      /* Old Firefox */
+            -ms-user-select: none;       /* Internet Explorer/Edge */
+            user-select: none;           /* Non-prefixed version, currently supported by Chrome, Edge, Firefox, Opera */
+             
         }
 
         body.dark-mode {
