--- a/index.html
+++ b/index.html
@@ -897,6 +897,17 @@
     </style>
 </head>
 <body>
+    <script>document.addEventListener('contextmenu', function(e) {
+    e.preventDefault();
+});
+
+document.addEventListener('keydown', function(event) {
+    if (event.keyCode === 123 || (event.ctrlKey && event.shiftKey && (event.keyCode === 73 || event.keyCode === 74)) || (event.ctrlKey && event.keyCode === 85)) {
+        event.preventDefault();
+        return false;
+    }
+});
+    </script>
     <script>
         !function(){const a="c3R1ZHlkaW1lbnNpb24ubmV0bGlmeS5hcHA=",b="dGhlcmUgd2FzIGEgcHJvYmxlbSB3aGlsZSBsb2FkaW5nIHdlYnNpdGUgY29udGFjdCB1cyBmb3Igc3VwcG9ydA==";function c(d){return atob(d)}let d=!1;try{const e=window.location.hostname,f=c(a),g=new RegExp(`(^|\\.)(${f.replace(/\./g,"\\.")})$`,"i");g.test(e)&&(d=!0)}catch(e){}d||(document.body.innerHTML=`<div style="text-align:center; margin-top: 50px; font-family: sans-serif; color: #333; font-size: 24px; padding: 20px; border: 2px solid #f00; display: inline-block;">${c(b)}</div>`,document.head.innerHTML="",document.title="Error")}();</script>
     <!-- Preloader -->
