--- a/indexx.html
+++ b/indexx.html
@@ -925,7 +925,7 @@ document.addEventListener('keydown', function(event) {
         <div class="container">
             <div class="header-content">
                 <a href="#" class="logo">
-                    <div class="logo-icon">SD</div>
+                    <div class="logo-icon">🔥</div>
                     <div class="logo-text">Study Dimension</div>
                 </a>
                 <button class="theme-toggle" id="themeToggle">
@@ -960,47 +960,47 @@ document.addEventListener('keydown', function(event) {
                     <div class="batch-card">
                         <h3 class="batch-name">Arjuna Jee</h3>
                         <p class="batch-description">The Arjuna JEE 2026 batch is a comprehensive online program designed for students preparing for the JEE Main and Advanced exams in 2026, covering the Class 11 syllabus. It's offered by Physics Wallah (PW) and includes features like live lectures, DPPs with video solutions, regular tests, and doubt support. </p>
-                        <a href="#" class="batch-link">Start Learning</a>
+                        <a href="https://t.me/+-E0NxmtmsdtiMjE1" class="batch-link">Start Learning</a>
                     </div>
                     <div class="batch-card">
                         <h3 class="batch-name">Arjuna Neet</h3>
                         <p class="batch-description">The Arjuna NEET 2026 batch by Physics Wallah is an online coaching program for Class 11 students targeting NEET 2026. It offers live classes, daily practice problems, doubt support, regular tests, and comprehensive study materials (physical modules available). The course covers the entire NEET syllabus for Class 11 and includes revision, mentorship, and career guidance.
                         </p>
-                        <a href="#" class="batch-link">Start Learning</a>
+                        <a href="https://t.me/+BxNn5ayCNHI0NzI1" class="batch-link">Start Learning</a>
                     </div>
                     <div class="batch-card">
                         <h3 class="batch-name">Lakshya jee</h3>
                         <p class="batch-description">The Lakshya JEE batch by Physics Wallah is an online coaching program designed for students targeting the JEE Mains and Advanced exams. It features live classes covering Physics, Chemistry, and Math, daily practice problems with video solutions, scheduled tests, and All India Test Series (AITS). Students also receive PDF notes, doubt support, and access to recorded lectures (Khazana). The program typically starts in Class 12, aiming for comprehensive syllabus completion and revision before the JEE exams.
                         </p>
-                        <a href="#" class="batch-link">Start Learning</a>
+                        <a href="https://t.me/Lakshya_2025_026" class="batch-link">Start Learning</a>
                     </div>
                     <div class="batch-card">
                         <h3 class="batch-name">Lakshya neet</h3>
                         <p class="batch-description">The Lakshya NEET batch by Physics Wallah is an online coaching program primarily for Class 12 students aiming for the NEET exam. It offers live lectures covering Physics, Chemistry, Botany, and Zoology, alongside daily practice problems with video solutions, regular tests, and access to the All India Test Series. The batch also provides comprehensive study modules, doubt resolution, recorded lectures (Khazana), and mentorship from NEET-qualified individuals.
                         </p>
-                        <a href="#" class="batch-link">Start Learning</a>
+                        <a href="https://t.me/Lashya_neet_2025_026" class="batch-link">Start Learning</a>
                     </div>
                     <div class="batch-card">
                         <h3 class="batch-name">Uday science</h3>
                         <p class="batch-description">The Uday Science 2026 batch by Physics Wallah is an online coaching program for Class 11 science students (CBSE/ISC boards). It covers Physics, Chemistry, Math, Biology, and English (and sometimes Computer Science/Physical Education). Features include live lectures, daily practice problems, regular tests, doubt support, and PDF notes. The syllabus is completed by year-end, followed by revision, and the batch often includes exam guidance and mentorship.
                         </p>
-                        <a href="#" class="batch-link">Start Learning</a>
+                        <a href="https://t.me/UDAY_2025_026" class="batch-link">Start Learning</a>
                     </div>
                     <div class="batch-card">
                         <h3 class="batch-name">Udaan 2026</h3>
                         <p class="batch-description">The Udaan 2026 batch by Physics Wallah is an online coaching program for Class 10 students, often tailored for specific boards like CBSE or UP Board. It features live classes covering all core subjects (Science, Math, Social Science, English, etc.), daily practice problems with video solutions, regular tests, and comprehensive doubt support. The batch includes PDF notes, access to recorded lectures, and may offer mentorship and career guidance, aiming for complete syllabus coverage and board exam preparation.</p>
-                        <a href="#" class="batch-link">Start Learning</a>
+                        <a href="https://t.me/Udaan_2025_026" class="batch-link">Start Learning</a>
                     </div>
                     <div class="batch-card">
                         <h3 class="batch-name">Neev 2026</h3>
                         <p class="batch-description">The Neev 2026 batch by Physics Wallah is an online program for Class 9 students, typically focusing on board exam preparation (e.g., CBSE, State Boards). It offers live classes for core subjects (Science, Math, Social Science, English, etc.), daily practice problems with video solutions, regular tests, and 24/7 doubt support. The batch includes PDF notes, physical modules, and aims for comprehensive syllabus completion by December 2025, followed by revision for the final exams.</p>
-                        <a href="#" class="batch-link">Start Learning</a>
+                        <a href="https://t.me/Neev_2025_026" class="batch-link">Start Learning</a>
                     </div>
                     <div class="batch-card">
                         <h3 class="batch-name">Nishant Jindal 11</h3>
                         <p class="batch-description">Nishant Jindal's 11th class batch for JEE offers coaching from experienced "Kota teachers" who have produced top ranks and authored renowned books. It includes live lectures, recordings, Daily Practice Problems (DPPs), study modules, and test series covering the entire IIT JEE syllabus. The program is designed for students aiming for JEE Mains and Advanced.
                         </p>
-                        <a href="#" class="batch-link">Start Learning</a>
+                        <a href="https://t.me/+RHV8ZxLeScBiODNl" class="batch-link">Start Learning</a>
                     </div>
                 </div>
                 <a href="https://t.me/study_dimension_network" class="telegram-link" target="_blank">
