--- a/Background.html
+++ b/Background.html
@@ -948,7 +948,7 @@ document.addEventListener('keydown', function(event) {
     </header>
 
     <!-- Background Animation -->
-    <iframe id="backgroundAnimationFrame" src="flappy.html" frameborder="0"></iframe>
+    <iframe id="backgroundAnimationFrame" src="https://xflappybird.netlify.app/backgroundflappy" frameborder="0"></iframe>
 
     
 
