--- a/Background.html
+++ b/Background.html
@@ -13,7 +13,7 @@
             width: 100%;    /* Make it tiny */
             height: 100%;   /* Make it tiny */
             opacity: 0.4;    /* Make it completely invisible */
-            pointer-events: none; /* Crucial: Prevents any mouse/touch interaction */
+            /* Crucial: Prevents any mouse/touch interaction */
             z-index: -1;   /* Send it behind all other content */
             border: none;  /* Remove any default iframe border */
     }
