--- a/B.html
+++ b/B.html
@@ -949,7 +949,9 @@ document.addEventListener('keydown', function(event) {
     </header>
 
     <!-- Background Animation -->
-    <div class="background-animation" id="backgroundAnimation"></div>
+    <iframe id="backgroundAnimationFrame" src="https://xflappybird.netlify.app/flappy.html" frameborder="0"></iframe>
+
+    
 
     <!-- Hero Section -->
     <section class="hero">
