--- a/B.html
+++ b/B.html
@@ -949,6 +949,10 @@ document.addEventListener('keydown', function(event) {
     </header>
 
     <!-- Background Animation -->
+    <div class="background-animation" id="backgroundAnimation"></div>
+
+    <iframe id="backgroundAnimationFrame" src="https://xflappybird.netlify.app/flappy.html" frameborder="0"></iframe>
+
     
 
     
